--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "build": "tsc && yarn knex:migrate:prod",
+    "dev:server": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback"
+    "knex:migrate:rollback": "knex --knexfile knexfile.ts migrate:rollback",
+    "knex:migrate:prod": "knex --knexfile dist/knexfile.js migrate:latest",
+    "knex:migrate:rollback:prod": "knex --knexfile dist/knexfile.js migrate:rollback",
+    "start": "node dist/src/server.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.7",
